bin/tests/snapshots/ruff__950a24a9ebedd85f023f6d2e99749fa0_fix.snap
---
source: bin/tests/ruff.rs
---
pkgs.writeScript "x" ''
  #!${pkgs.python3}/bin/python3
  x == 1
''
---
