bin/tests/snapshots/ruff__c37483bdb209dd7faa5252a8e6c2f952_fix.snap
---
source: bin/tests/ruff.rs
---
{ scripts.py = { package = pkgs.python312; exec = ''
  import sys
  print(${toString port})
''; }; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,3 @@
 { scripts.py = { package = pkgs.python312; exec = ''
-  import sys
   print(${toString port})
 ''; }; }
