bin/tests/snapshots/ruff__fad9fd5b6c2fcfb8ededf8de2428a741_fix.snap
---
source: bin/tests/ruff.rs
---
pkgs.writers.writePython3Bin "hello" { } ''
  import os
  print("hello")
''
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,3 @@
 pkgs.writers.writePython3Bin "hello" { } ''
-  import os
   print("hello")
 ''
